[tool.poetry]
name = "old-film-restoration"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
torchvision = "^0.20.1"
scikit-image = "^0.25.0"
natsort = "^8.4.0"
opencv-python = "^4.10.0.84"
einops = "^0.8.0"
timm = "^1.0.12"
thop = "^0.1.1.post2209072238"
loguru = "^0.7.3"
click = "^8.1.8"
tensorboard = "^2.18.0"
tensorboardx = "^2.6.2.2"
pytorch-msssim = "^1.0.0"
torchinfo = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
